<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OpenStax CNX</string>
    <string name="no_content">Loading Book List...</string>
    <string name="loading_title">Book Lists</string>
    <string name="loading_lenses_description">Loading Book Lists&#8230;</string>
    <string name="loading_favs_title">Favorites</string>
    <string name="loading_favs_description">Loading Favorites&#8230;</string>
    <string name="loading_single_title">Book List</string>
    <string name="loading_lens_description">Loading Selected Book List&#8230;</string>
    <string name="loading_web_title">Loading&#8230;</string>
    <string name="loading_web_description">Loading Selected Content&#8230;</string> 
    <string name="menu_add_to_favs">Add to Favorites</string>
    <string name="menu_go_to_favs">Go to Favorites</string>
    <string name="menu_help">Help</string>
    <string name="menu_delete_from_favs">Delete from Favorites</string>
    <string name="menu_search">Search OpenStax CNX</string>
    <string name="menu_lenses">Content</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_pdf">Download PDF</string>
    <string name="menu_epub">Download EPUB</string>
    <string name="menu_view_file">View Downloaded Files</string>
    <string name="menu_view_file_short">View Files</string>
    <string name="menu_delete_file">Delete Selected File</string>
    <string name="menu_add">Add note</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_open">Open</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_discard">Discard</string>
    <string name="menu_home">Home</string>
    <string name="menu_rate">Rate this app</string>
    <string name="up_one_level">Up One Level</string>
    <string name="webcontent">webcontent</string>
    <string name="content">content</string>
    <string name="intro">Welcome to Connexions for Android!\n\n  Browse our content using the Book Lists and save content you like to your Favorites.  Be sure to checkout the other features like search, taking notes, downloading EPUBs or PDFs, viewing downloaded files and help.</string>
    <string name="search_title">Search: </string>
    <string name="file_browser_title">OpenStax CNX - Select File to View</string>
    <string name="file_dialog_title">View</string>
    <string name="file_browser_toast">No Application Available to View File</string>
    <string name="lenses_fake_url">http://cnx.org</string>
    <string name="lenses_endorsed_desc">Organization endorsed books</string>
    <string name="lenses_affiliated_desc">Organization affiliated books</string>
    <string name="lenses_member_desc">User created book lists</string>
    <string name="lenses_featured_content_desc">Featured OpenStax CNX Content</string>
    <string name="lenses_osc_desc">Books from OpenStax College</string>
    <string name="lenses_recent_desc">Recently published or updated content</string>
    <string name="nothing_to_save">There is nothing to save.</string>
    <string name="shared_via"> Shared via the OpenStax CNX app.</string>
    <string name="tell_friend">Tell a friend about </string>
    <string name="cache_lenstypes">lenstypes</string>
    <string name="cache_sentcontent">sentContent</string>
    <string name="cache_savedcontent">savedContent</string>
    <string name="cache_contentlist">contentList</string>
    <string name="cache_savednotecontent">savedNoteContent</string>
    <string name="mobile_url">http://m.cnx.org</string>
    <string name="help_page">Connexions_Android_App_Help.html</string>
    <string name="google">google.com</string>
    <string name="search">/search</string>
    <string name="no_data_msg">Data needed to share not available.  Use the back button to refresh and try again.</string>
    <string name="note_error_msg">Cannot create note.  Please try again.</string>
    <string name="note_sql_url">notes_url=?\'</string>
    <string name="cnx_folder">OpenStaxCNX\/</string>
    <string name="html_ext">.html</string>
    <string name="mimetype_text">text/plain</string>
    <string name="title_browse">Browse Book Lists</string>
    <string name="title_favs">Favorites</string>
    <string name="title_download">Downloaded Files</string>
    <string name="title_help">Help</string>
    <string name="gingerbread_copy_msg">Select Text then tap the text</string>
    <string name="froyo_copy_msg">Select Text</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
</resources>
 