<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
          android:icon="@drawable/magnify"
          android:title="@string/menu_search" 
          android:showAsAction="ifRoom"/>
    <item android:id="@+id/add_to_favs"
          android:icon="@drawable/favoritesadd"
          android:title="@string/menu_add_to_favs" />
    <item android:id="@+id/go_to_favs"
          android:icon="@drawable/favorites"
          android:title="@string/menu_go_to_favs" />
    <item android:id="@+id/viewFile"
          android:title="@string/menu_view_file"
          android:icon="@drawable/ic_menu_upload" />
    <item android:id="@+id/home"
          android:title="@string/menu_home"
          android:icon="@drawable/home" />
</menu>